# 2ndBrain

./: .env.template  .gitignore  AGENTS.md  LICENSE.md  README.md  install.sh  pyproject.toml  setup-gpg-pass.sh  setup-systemd-creds.sh  start-brain.sh
.github/workflows/: ci.yml
docs/: architecture.md  conf.py  setup_rclone.md
docs/explanations/: security.md
docs/how-to/: setup_rclone.md
docs/reference/: prompts.md
docs/tutorials/: installation.md  quickstart.md
migrate_old_vault/: migrate_vault.py
scripts/: brain.py  migrate-dates-to-datetime.py  pull-vault-templates.sh  slack_prompt.md
service-units/: brain.service  rclone-2ndbrain-bisync.service  rclone-2ndbrain-bisync.timer  rclone-2ndbrain.service
src/brain/: __init__.py  __main__.py  app.py  briefing.py  listener.py  processor.py  prompt.md  vault.py
src/brain/agents/: __init__.py  base.py  filing.py  memory.py  router.py  router_prompt.md  vault_edit.py  vault_query.py  vault_query_prompt.md
src/brain/vault_templates/: Dashboard.base  Dashboard.md
src/brain/vault_templates/_brain/: Dashboard.base  Media.base  Memories.base  Projects.base  Reference.base
tests/: test_vault_edit.py
